<resources>
    <string name="app_name">Domaku</string>
    <string name="eksplor">Eksplor</string>
    <string name="donor_makan">Donor Makan</string>
    <string name="ambil">Ambil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">Kategori</string>
    <string name="subtitle_explore">Cari makanan yang dapat kamu ambil disekitarmu!</string>
    <string name="title_explore">Eksplorasi Makanan Disekitarmu</string>
    <string name="item_name">the quick brown fox jump over the lazy dog</string>
    <string name="donasikan_makanan">Donasikan Makanan</string>
    <string name="Donasi_quote">Mari kita buang kebiasaan buruk kita dengan membuang buang sisa makanan dengan cara membagikan kepada yang membutuhkannya!</string>
    <string name="ambil_subtitle">Anda belum mengambil apapun</string>
    <string name="Ambil_title">Pengambilan</string>
    <string name="buat">BUAT</string>
    <string name="pengambilan">Pengambilan</string>
    <string name="title_activity_donasi_detail">donasi_detail</string>
    <string name="explore_detail_title">The Quick Brown Fox Jumps Over The Lazy Dog</string>
    <string name="explore_detail_sisa">Tersisa :</string>
    <string name="explore_detail_sisacount">0</string>
    <string name="jumlah_porsi">0 Porsi</string>
    <string name="batas_waktu">Segera Mungkin</string>
    <string name="alamat_donasi">Jl. Anggrek no 11, Cipamokolan, Bandung, Jawa Barat.</string>
    <string name="pengambilan_subtitle">Anda belum mengambil apapun</string>
    <string name="ambil_item_title">The Quick Brown Fox Jumps Over The Lazy Dog</string>
    <string name="frag_ambil">PENGAMBILAN</string>
    <string name="frag_donasi">DONASI</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
</resources>
