<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".explore_detail">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/explore_detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/blurredphoto"
                    android:scaleType="centerCrop"/>
                <ImageButton
                    android:id="@+id/explore_detail_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_chevron_left_white_24dp"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:fontFamily="@font/robotobold"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:text="@string/explore_detail_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_detail_sisa"
                app:fontFamily="@font/robotoregular"
                android:textColor="@color/black"
                android:layout_marginHorizontal="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_detail_sisacount"
                app:fontFamily="@font/robotoregular"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:layout_marginHorizontal="16dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_margin="16dp"
                android:background="@color/dark_gray" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_people_cccccc_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/jumlah_porsi"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_timelapse_cccccc_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/batas_waktu"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_location_on_cccccc_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textSize="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/alamat_donasi"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="60dp"
                android:background="@color/dark_gray" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="120dp"
            android:text="Ambil"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"/>
    </RelativeLayout>

</RelativeLayout>